Odin Recipes 2025 added ricetta

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,6 +8,29 @@
   </head>
   <body>
     <h1>Ricetta per la pizza</h1>
+    <img
+      src="../images/Punch_Neapolitan_Pizza_Margherita.jpg"
+      alt="A delicious pizza napoletana"
+    />
+    <h2>Description</h2>
+    <p>La pizza napoletana e' la vera pizza, non come quella "pakistana".</p>
+    <p>
+      e' cotta nel forno a legna, lievitata molto piu' tempo, e di conseguenza
+      risulta molto piu' soffice, a volte quasi gommosa.
+    </p>
+    <ul>
+      <li>farina</li>
+      <li>acqua</li>
+      <li>lievito</li>
+      <li>pomodoro</li>
+      <li>mozzarella</li>
+    </ul>
+    <ol>
+      <li>Go to pizza-export website</li>
+      <li>Order pizza</li>
+
+      <li>Eat and enjoy!</li>
+    </ol>
     <a href="../index.html">Back to Home</a>
   </body>
 </html>
